Added some more paragraphs to Usertest, still needs to be completed

--- a/_posts/2019-04-10-UserTest2.md
+++ b/_posts/2019-04-10-UserTest2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Samenvatting van User Test #2"
+title: "Samenvatting van User Test #2 & #3"
 description: "Resultaten van eerste user test."
 author: jan
 tags: summary
@@ -31,6 +31,18 @@ De spelers vinden het erg fijn om snel overzicht te krijgen in de mogelijkheden 
 
 Hiernaast missen de spelers nog de hulp met de relatie tussen óf en welke dobbelstennen ze voor spelers moeten rollen en wat er bedoelt wordt met woorden zoals spell casting abilities. Het ontbreken van referenties naar _saving throws_ en _attack rolls_ moeten worden geïnterpreteerd als informatie dat deze informatie ontbreken. Dit is voor spelers niet duidelijk! 
 
+
+
+[foto van Dungeon Master screen]
+
+## Initiative tracker
+
+
+
+### Iteratie:
+
+
+
 [foto van initiative tracker]
 
 ## Initiative tracker
@@ -55,3 +67,21 @@ Worden erg fijn ervaren en zorgen er voor dat Dungeon Master net als de andere s
 
 ### Iteratie:
 Eventueel is hier nog iets aan de visuele vormgeving te doen, maar de inhoud en praktische vormgeving wordt als ruim voldoende ervaren. Voor de visuele vormgeving lijkt het mij interessant om te kijken naar een kaartje met de stats en battle skills aan de voorkant, met een illustratie van het monster aan de achterkant. 
+
+[Dungeon Cards]
+
+## Dungeon Cards: Stat Blocks
+
+
+
+### Iteratie:
+
+
+[Dungeon Tiles]
+
+## Monster Cards: Stat Blocks
+
+
+
+### Iteratie:
+
