--- a/_posts/2019-04-10-UserTest2.md
+++ b/_posts/2019-04-10-UserTest2.md
@@ -32,15 +32,13 @@ De spelers vinden het erg fijn om snel overzicht te krijgen in de mogelijkheden 
 Hiernaast missen de spelers nog de hulp met de relatie tussen óf en welke dobbelstennen ze voor spelers moeten rollen en wat er bedoelt wordt met woorden zoals spell casting abilities. Het ontbreken van referenties naar _saving throws_ en _attack rolls_ moeten worden geïnterpreteerd als informatie dat deze informatie ontbreken. Dit is voor spelers niet duidelijk! 
 
 
-
 [foto van Dungeon Master screen]
 
-## Initiative tracker
-
-
+## Dungeon Master screen
+Tijdens de gebruikerstest en mijn eigen gebruik heeft zowel de Dungeon Master van de testgroep als ik zelf het DM-screen als erg fijn ervaren. De hoogte is erg fijn, zodat je fijn alles wat je doet af kunt schermen, maar je niet afgesloten voelt van al het andere wat plaatsvindt op en aan de tafel. Wat wel opvalt is dat ondanks dat we dit een fijne ervaring vinden bieden toch erg weinig van de informatie op het scherm gebruik maken. Mijn vermoeden is dat de informatie op het scherm fijn is als back-up _just in case_, alleen dat dit nog niet informatie is die we vaak gebruiken. 
 
 ### Iteratie:
-
+Tijdens een volgende iteratie van het DM-screen is het naar mijn vermoeden beter om hier informatie op te plaatsen die geschikter is voor beginnende Dungeon Masters. Delen hier van kunnen onder andere zijn welke stappen een combat round bestaat en uitleg van de verschillende stats op een character sheets. Nu wordt er ook veel ruimte in genomen door bijvoorbeeld verschillende condities. Deze zijn erg fijn, maar nog niet per sé direct van toegevoegde waarde. Op deze manier zou ik de verschillende onderdelen die op het scherm staan nog beter kunnen herverdelen.
 
 
 [foto van initiative tracker]
