--- a/_posts/2019-04-10-UserTest2.md
+++ b/_posts/2019-04-10-UserTest2.md
@@ -7,7 +7,7 @@ tags: summary
 category: research
 ---
 
-[beeld van character sheets]
+![Custom character sheet]({{site.url}}/assets/charactersheet.jpg)
 
 ## Character Sheet
 
@@ -18,12 +18,12 @@ Over het algemeen zorgt de juist categorisatie wel voor een fijner spelverloop w
 ### Inventory
 Over de specifieke pagina's gesproken is de inventory pagina de minste gebruikte. Naar Twan zijn mening is deze zelfs erg waardeloos: er staat te weinig informatie op om nuttig te zijn, hij kijkt hier vervolgens dan niet naar. Wel is het fijn dat de inhoud van de inventory inzichtelijker is om in te kijken. Dit wordt vaker door verschillende spelers aangegeven dat ze hier geen overzicht in hebben en er geen ruimte is om nieuwe items bij te schrijven. Mogelijk is het een betere optie om deze pagina met andere pagina's te combineren. 
 
-[Spell tracker pagina]
+![Spell tracker pagina]({{site.url}}/assets/charactersheet.jpg)
 
 ### Spell sheet & Spell slot tracker
 Dit helpt de speler erg om het gebruik van de spell slot te visualieren en hier een overzicht in te behouden. Wel staat er op de huidige pagina nog erg veel lege ruimte die niet gebruikt wordt, niet duidelijk wat er met alle vakjes zoals ... bedoelt wordt en is de volgeorde van de spell levels niet erg logisch voor de gebruiker. Zo komen cantrips, level 0 spells, niet voor de level 1 spells, maar allerlaatste op de pagina.
 
-[Spell cards]
+![Spell cards]({{site.url}}/assets/spellcards.jpg)
 
 ## Spell cards
 
@@ -32,7 +32,7 @@ De spelers vinden het erg fijn om snel overzicht te krijgen in de mogelijkheden 
 Hiernaast missen de spelers nog de hulp met de relatie tussen óf en welke dobbelstennen ze voor spelers moeten rollen en wat er bedoelt wordt met woorden zoals spell casting abilities. Het ontbreken van referenties naar _saving throws_ en _attack rolls_ moeten worden geïnterpreteerd als informatie dat deze informatie ontbreken. Dit is voor spelers niet duidelijk! 
 
 
-[foto van Dungeon Master screen]
+![foto van Dungeon Master screen]({{site.url}}/assets/DMscreen.jpg)
 
 ## Dungeon Master screen
 Tijdens de gebruikerstest en mijn eigen gebruik heeft zowel de Dungeon Master van de testgroep als ik zelf het DM-screen als erg fijn ervaren. De hoogte is erg fijn, zodat je fijn alles wat je doet af kunt schermen, maar je niet afgesloten voelt van al het andere wat plaatsvindt op en aan de tafel. Wat wel opvalt is dat ondanks dat we dit een fijne ervaring vinden bieden toch erg weinig van de informatie op het scherm gebruik maken. Mijn vermoeden is dat de informatie op het scherm fijn is als back-up _just in case_, alleen dat dit nog niet informatie is die we vaak gebruiken. 
@@ -41,7 +41,7 @@ Tijdens de gebruikerstest en mijn eigen gebruik heeft zowel de Dungeon Master va
 Tijdens een volgende iteratie van het DM-screen is het naar mijn vermoeden beter om hier informatie op te plaatsen die geschikter is voor beginnende Dungeon Masters. Delen hier van kunnen onder andere zijn welke stappen een combat round bestaat en uitleg van de verschillende stats op een character sheets. Nu wordt er ook veel ruimte in genomen door bijvoorbeeld verschillende condities. Deze zijn erg fijn, maar nog niet per sé direct van toegevoegde waarde. Op deze manier zou ik de verschillende onderdelen die op het scherm staan nog beter kunnen herverdelen.
 
 
-[foto van initiative tracker]
+![foto van initiative tracker]({{site.url}}/assets/tracker.jpg)
 
 ## Initiative tracker
 
@@ -52,12 +52,12 @@ Wat hierbij opviel is dat de suprise round in combat niet altijd in de juiste vo
 ### Iteratie:
 Bij de volgend versie wil ik kleine herinnering voor het bepalen voor de volgorde van combat aan de tracker toevoegen. 
 
-[Beeld Character tent]
+![Beeld Character tent]({{site.url}}/assets/charactertent.jpg)
 
 ## Character Tent
 De Dungeon Master vindt fijn om zichtbaar veel bruikbare info te hebben van de spelers. Op deze manier hoeft tijdens het spelen niet zoveel gevraagd of opgezocht te worden. Zeker te gebruiken, mogelijk nog met iets als de initiative tracker te combineren? Hoeft er tijdens battles niet op twee plekken gekeken te worden.  
 
-[Monster cards]
+![Monster cards]({{site.url}}/assets/monstersheet.jpg)
 
 ## Monster Cards: Stat Blocks
 
@@ -66,7 +66,7 @@ Worden erg fijn ervaren en zorgen er voor dat Dungeon Master net als de andere s
 ### Iteratie:
 Eventueel is hier nog iets aan de visuele vormgeving te doen, maar de inhoud en praktische vormgeving wordt als ruim voldoende ervaren. Voor de visuele vormgeving lijkt het mij interessant om te kijken naar een kaartje met de stats en battle skills aan de voorkant, met een illustratie van het monster aan de achterkant. 
 
-[Dungeon Cards]
+![Dungeon Cards]({{site.url}}/assets/dungeoncards.jpg)
 
 ## Dungeon Cards: Stat Blocks
 
@@ -75,7 +75,8 @@ Eventueel is hier nog iets aan de visuele vormgeving te doen, maar de inhoud en 
 ### Iteratie:
 
 
-[Dungeon Tiles]
+![Dungeon Tiles]({{site.url}}/assets/maptest_v01.jpg)
+![Dungeon Tiles]({{site.url}}/assets/maptest_v02.jpg)
 
 ## Monster Cards: Stat Blocks
 
