--- a/_posts/2019-04-10-UserTest2.md
+++ b/_posts/2019-04-10-UserTest2.md
@@ -18,10 +18,12 @@ Over het algemeen zorgt de juist categorisatie wel voor een fijner spelverloop w
 ### Inventory
 Over de specifieke pagina's gesproken is de inventory pagina de minste gebruikte. Naar Twan zijn mening is deze zelfs erg waardeloos: er staat te weinig informatie op om nuttig te zijn, hij kijkt hier vervolgens dan niet naar. Wel is het fijn dat de inhoud van de inventory inzichtelijker is om in te kijken. Dit wordt vaker door verschillende spelers aangegeven dat ze hier geen overzicht in hebben en er geen ruimte is om nieuwe items bij te schrijven. Mogelijk is het een betere optie om deze pagina met andere pagina's te combineren. 
 
+
 ![Spell tracker pagina]({{site.url}}/assets/charactersheet.jpg)
 
 ### Spell sheet & Spell slot tracker
 Dit helpt de speler erg om het gebruik van de spell slot te visualieren en hier een overzicht in te behouden. Wel staat er op de huidige pagina nog erg veel lege ruimte die niet gebruikt wordt, niet duidelijk wat er met alle vakjes zoals ... bedoelt wordt en is de volgeorde van de spell levels niet erg logisch voor de gebruiker. Zo komen cantrips, level 0 spells, niet voor de level 1 spells, maar allerlaatste op de pagina.
+
 
 ![Spell cards]({{site.url}}/assets/spellcards.jpg)
 
@@ -52,10 +54,12 @@ Wat hierbij opviel is dat de suprise round in combat niet altijd in de juiste vo
 ### Iteratie:
 Bij de volgend versie wil ik kleine herinnering voor het bepalen voor de volgorde van combat aan de tracker toevoegen. 
 
+
 ![Beeld Character tent]({{site.url}}/assets/charactertent.jpg)
 
 ## Character Tent
 De Dungeon Master vindt fijn om zichtbaar veel bruikbare info te hebben van de spelers. Op deze manier hoeft tijdens het spelen niet zoveel gevraagd of opgezocht te worden. Zeker te gebruiken, mogelijk nog met iets als de initiative tracker te combineren? Hoeft er tijdens battles niet op twee plekken gekeken te worden.  
+
 
 ![Monster cards]({{site.url}}/assets/monstersheet.jpg)
 
@@ -65,6 +69,7 @@ Worden erg fijn ervaren en zorgen er voor dat Dungeon Master net als de andere s
 
 ### Iteratie:
 Eventueel is hier nog iets aan de visuele vormgeving te doen, maar de inhoud en praktische vormgeving wordt als ruim voldoende ervaren. Voor de visuele vormgeving lijkt het mij interessant om te kijken naar een kaartje met de stats en battle skills aan de voorkant, met een illustratie van het monster aan de achterkant. 
+
 
 ![Dungeon Cards]({{site.url}}/assets/dungeoncards.jpg)
 
@@ -78,7 +83,7 @@ Eventueel is hier nog iets aan de visuele vormgeving te doen, maar de inhoud en 
 ![Dungeon Tiles]({{site.url}}/assets/maptest_v01.jpg)
 ![Dungeon Tiles]({{site.url}}/assets/maptest_v02.jpg)
 
-## Monster Cards: Stat Blocks
+## Dungeon Tiles
 
 
 
