--- a/_posts/2019-04-10-UserTest2.md
+++ b/_posts/2019-04-10-UserTest2.md
@@ -16,7 +16,9 @@ De eerste reactie zoals ik de character sheet aan Twan, wizard, heb gegeven is d
 Over het algemeen zorgt de juist categorisatie wel voor een fijner spelverloop waarbij de spelers wel de juiste informatie veel sneller kunnen vinden. Dit is onder andere ook in samenwerking met de spell cards die ik twee kopjes verder zal bespreken. 
 
 ### Inventory
-Over de specifieke pagina's gesproken is de inventory pagina de minste gebruikte. Naar Twan zijn mening is deze zelfs erg waardeloos: er staat te weinig informatie op om nuttig te zijn, hij kijkt hier vervolgens dan niet naar. Wel is het fijn dat de inhoud van de inventory inzichtelijker is om in te kijken. Dit wordt vaker door verschillende spelers aangegeven dat ze hier geen overzicht in hebben en er geen ruimte is om nieuwe items bij te schrijven. Mogelijk is het een betere optie om deze pagina met andere pagina's te combineren. 
+Over de specifieke pagina's gesproken is de inventory pagina de minste gebruikte. Naar Twan zijn mening is deze zelfs erg waardeloos: er staat te weinig informatie op om nuttig te zijn, hij kijkt hier vervolgens dan niet naar. 
+
+Wel is het fijn dat de inhoud van de inventory inzichtelijker is om in te kijken. Door verschillende spelers wordt aangegeven dat ze hier normaal geen overzicht in hebben en er op de standaard character sheets geen ruimte is om nieuwe items bij te schrijven. Mogelijk is het een goede optie om deze pagina met andere pagina's te combineren. 
 
 
 ![Spell cards]({{site.url}}/assets/spellcards.jpg)
