Versie nummers toegevoegd.

--- a/_posts/2019-04-10-UserTest2.md
+++ b/_posts/2019-04-10-UserTest2.md
@@ -31,7 +31,7 @@ Dit helpt de speler erg om het gebruik van de spell slot te visualieren en hier 
 
 De spelers vinden het erg fijn om snel overzicht te krijgen in de mogelijkheden van de spells en abilities. Wel geven beide spellcasters, Twan en Marjolaine aan dat bij sommige spells er teveel niet relevante informatie op de kaartjes staat zoals bijvoorbeeld hoe de spel werkt op hogere levels.
 
-Hiernaast missen de spelers nog de hulp met de relatie tussen óf en welke dobbelstennen ze voor spelers moeten rollen en wat er bedoelt wordt met woorden zoals spell casting abilities. Het ontbreken van referenties naar _saving throws_ en _attack rolls_ moeten worden geïnterpreteerd als informatie dat deze informatie ontbreken. Dit is voor spelers niet duidelijk! 
+Hiernaast missen de spelers nog de hulp met de relatie tussen óf en welke dobbelstenen ze voor spelers moeten rollen en wat er bedoelt wordt met woorden zoals spell casting abilities. Het ontbreken van referenties naar _saving throws_ en _attack rolls_ moeten worden geïnterpreteerd als informatie dat deze informatie ontbreken. Dit is voor spelers niet duidelijk! 
 
 
 ![foto van Dungeon Master screen]({{site.url}}/assets/DMscreen.jpg)
@@ -80,9 +80,11 @@ Eventueel is hier nog iets aan de visuele vormgeving te doen, maar de inhoud en 
 ### Iteratie:
 
 
-![Dungeon Tiles]({{site.url}}/assets/maptest_v01.jpg)
+![Dungeon Tiles]({{site.url}}/assets/maptest_v01.jpg)  
+v0.1
 
 ![Dungeon Tiles]({{site.url}}/assets/maptest_v02.jpg)
+v0.2
 
 ## Dungeon Tiles
 
