--- a/_posts/2019-04-10-UserTest2.md
+++ b/_posts/2019-04-10-UserTest2.md
@@ -13,25 +13,25 @@ category: research
 
 De eerste reactie zoals ik de character sheet aan Twan, wizard, heb gegeven is dat het wel erg veel pagina's zijn. Dit merk je ook bij het spelen, het neemt erg veel ruimte in en zorgt niet perse voor een verbetering: een aantal van de pagina's zijn duidelijk overbodig. 
 
-Over het algemeen zorgt de juist categorisatie wel voor een fijner spelverloop waarbij de spelers wel de juiste informatie veel sneller kunnen vinden. Dit is onder andere ook in samenwerking met de spell cards die ik twee kopjes verder zal bespreken. 
+Over het algemeen zorgt de juiste categorisatie wel voor een fijner spelverloop waarbij de spelers de juiste informatie veel sneller kunnen vinden. Dit is onder andere ook in samenwerking met de spell cards die ik twee kopjes verder zal bespreken. 
 
 ### Inventory
-Over de specifieke pagina's gesproken is de inventory pagina de minste gebruikte. Naar Twan zijn mening is deze zelfs erg waardeloos: er staat te weinig informatie op om nuttig te zijn, hij kijkt hier vervolgens dan niet naar. 
+Van de specifieke pagina's is de inventory pagina de minste gebruikte. Naar Twan zijn mening is deze zelfs erg waardeloos: er staat te weinig informatie op om nuttig te zijn, hij kijkt hier vervolgens dan ook niet naar. 
 
-Wel is het fijn dat de inhoud van de inventory inzichtelijker is om in te kijken. Door verschillende spelers wordt aangegeven dat ze hier normaal geen overzicht in hebben en er op de standaard character sheets geen ruimte is om nieuwe items bij te schrijven. Mogelijk is het een goede optie om deze pagina met andere pagina's te combineren. 
+Wel is het fijn dat de inhoud van de inventory inzichtelijker is om in te kijken. Door verschillende spelers wordt aangegeven dat ze hier normaal geen overzicht in hebben en hiernaast is er op de standaard character sheets geen ruimte is nieuwe items bij te schrijven. Mogelijk is het een goede optie om deze pagina met andere te combineren. 
 
 
 ![Spell cards]({{site.url}}/assets/spellcards.jpg)
 
 ### Spell sheet & Spell slot tracker
-Dit helpt de speler erg om het gebruik van de spell slot te visualieren en hier een overzicht in te behouden. Wel staat er op de huidige pagina nog erg veel lege ruimte die niet gebruikt wordt, niet duidelijk wat er met alle vakjes zoals ... bedoelt wordt en is de volgeorde van de spell levels niet erg logisch voor de gebruiker. Zo komen cantrips, level 0 spells, niet voor de level 1 spells, maar allerlaatste op de pagina.
+Dit helpt de speler erg om het gebruik van de spell slot te visualieren en hier een overzicht in te behouden. Wel staat er op de huidige pagina nog erg veel lege ruimte die niet gebruikt wordt, is er niet duidelijk wat er met alle in te vullen vakken wordt bedoeld en is de volgeorde van de spell levels niet erg logisch voor de gebruiker. Zo komen cantrips, level 0 spells, niet voor de level 1 spells, maar als allerlaatste op de pagina.
 
 
 ## Spell cards
 
 De spelers vinden het erg fijn om snel overzicht te krijgen in de mogelijkheden van de spells en abilities. Wel geven beide spellcasters, Twan en Marjolaine aan dat bij sommige spells er teveel niet relevante informatie op de kaartjes staat zoals bijvoorbeeld hoe de spel werkt op hogere levels.
 
-Hiernaast missen de spelers nog de hulp met de relatie tussen óf en welke dobbelstenen ze voor spelers moeten rollen en wat er bedoelt wordt met woorden zoals spell casting abilities. Het ontbreken van referenties naar _saving throws_ en _attack rolls_ moeten worden geïnterpreteerd als informatie dat deze informatie ontbreken. Dit is voor spelers niet duidelijk! 
+Hiernaast missen de spelers hulp met óf en welke dobbelstenen ze moeten rollen en wat er bedoelt wordt met woorden zoals spell casting abilities. In het idee van _Wizard of the Coast_ moet het ontbreken van referenties naar _saving throws_ en _attack rolls_ worden geïnterpreteerd als dat deze niet nodig zijn. Dit is voor spelers niet duidelijk! 
 
 
 ![foto van Dungeon Master screen]({{site.url}}/assets/DMscreen.jpg)
