Updating text about user test and adding proof of concept post

--- a/_posts/2019-07-29-UserTest4.md
+++ b/_posts/2019-07-29-UserTest4.md
@@ -7,7 +7,7 @@ tags: summary
 category: research
 ---
 
-![Image of final usertest]({{site.url}}/assets/progress2/screencap.png)
+<iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLo_ke79yXggRU_eEQ9Gzjr39CAxhOM0Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 Uit de laatste usertest van mijn product heb ik de volgende verbeterpunten kunnen halen, maar ik ben ook blij om te zien dat het algemene concept erg goed blijkt te werken. Ondanks dat ik deelnemers tijdens deze usertest nog steeds heb zien twijfelen was het in dit geval omdat ze twijfelde over wat ze *wilde* doen in plaats van dat ze het niet duidelijk was wat ze *kunnen* doen. 
 
@@ -71,3 +71,5 @@ Manier hoe hij dingen kan introduceren
 Overzicht voor DM in wat de stappen zijn die er komen.
 
 Geschreven introductie om als introducerende tekst uit te spreken voordat de nieuwe regels aan spelers overhandigt worden.
+
+Campaign
