--- a/_posts/2019-07-29-UserTest4.md
+++ b/_posts/2019-07-29-UserTest4.md
@@ -7,7 +7,8 @@ tags: summary
 category: research
 ---
 
-<iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLo_ke79yXggRU_eEQ9Gzjr39CAxhOM0Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLo_ke79yXggRU_eEQ9Gzjr39CAxhOM0Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Playlist with two videos. Second video in the playlist contains user feedback.
 
 Uit de laatste usertest van mijn product heb ik de volgende verbeterpunten kunnen halen, maar ik ben ook blij om te zien dat het algemene concept erg goed blijkt te werken. Ondanks dat ik deelnemers tijdens deze usertest nog steeds heb zien twijfelen was het in dit geval omdat ze twijfelde over wat ze *wilde* doen in plaats van dat ze het niet duidelijk was wat ze *kunnen* doen. 
 
