--- a/_posts/2019-07-29-UserTest4.md
+++ b/_posts/2019-07-29-UserTest4.md
@@ -12,7 +12,7 @@ Playlist with two videos. Second video in the playlist contains user feedback.
 
 Na afloop van de laatste gebruikerstest, en na enige bezinking van de resultaten, ben ik blij om te merken dat bij de test van mijn _Proof of Concept_ iedereen snel aan de slag kon met deze editie van _Dungeons & Dragons_. Er waren nog steeds enkele twijfels en momenten waarbij het spel wat trager verliep, maar in tegenstelling tot bij de eerste gebruikerstest gingen deze twijfels voornamelijk over wat ze *wilden* doen in plaats van wat ze *konden* doen. 
 
-Wel blijft zoals bij elk product, en zeker met een kritische blik, nog genoeg dingen over om te verbeteren. Zo waren er bijvoorbeeld nog momenten van stilte waarbij de spelers erg veel gefocust waren op de teksten die ze te lezen kregen. In de volgende paragrafen zal ik deze kort behandelen.
+Wel blijven zoals bij elk product, en zeker met een kritische blik, nog genoeg dingen over om te verbeteren. Zo waren er bijvoorbeeld nog momenten van stilte waarbij de spelers erg veel gefocust waren op de teksten die ze te lezen kregen. In de volgende paragrafen zal ik deze kort behandelen.
 
 ## Wat heb ik getest?
 Deze usertest dient twee hoofddoelen. Als eerste bestaat het _Proof of Concept_ uit veel verschillende onderdelen. Deze losse onderdelen zijn gebasseerd op eerder onderzoek, maar hebben veel iteraties ondergaan en zijn nog niet getest in de huidige context. Hiernaast zijn er nog variaties die op een onderscheidende manier aan een interface vorm geven. 
@@ -22,37 +22,37 @@ Maar het belangrijkste hoofddoel van deze usertest is natuurlijk het testen van 
 ## Resultaten
 
 ### Concept
-De spelers waren erg tevreden over de sessie, maar niet alleen hebben de spelers een goede tijd gehad ook ik ben tevreden met het resultaat. Tijdens de gebruikerstest konden de gebruikers snel aan de slag. Waar spelers bij orginele interface de spelregels moeten lezen en het nog niet snappen. Heeft voorafgaand aan deze test **niemand** de regels gelezen, werd het spel begrepen en waren er veel snellere keuze's.
+De spelers waren erg tevreden over de sessie, maar niet alleen hebben de spelers een goede tijd gehad, ook ik ben tevreden met het resultaat. Tijdens de gebruikerstest konden de gebruikers snel aan de slag. Waar spelers bij de orginele interface de spelregels moeten lezen en het nog niet snappen. Heeft voorafgaand aan deze test **niemand** de regels gelezen, werd het spel begrepen en waren er veel snellere keuze's.
 
-De spelers ervaren het als erg fijn dat ze doormiddel van een scene gefocust op een nieuwe skill met nieuwe regels en onderdelen van het spel worden geintroduceerd. Bij volgende iteraties zou ik dit graag nog wat verder door willen voeren, waar het spel uit meerdere kleinere scenes en campaignes is ogebouwd, en er voor de Dungeons Master begeleidende introductie teksten zijn die de spelers iets over de nieuwe items vertellen.
+De spelers ervaren het als erg fijn dat ze doormiddel van een scene gefocust op een nieuwe skill met nieuwe regels en onderdelen van het spel worden geintroduceerd. Bij volgende iteraties zou ik dit graag nog wat verder door willen voeren, waar het spel uit meerdere kleinere scenes en campaigns is ogebouwd, en er voor de Dungeons Master begeleidende introductie teksten zijn die de spelers iets over de nieuwe items vertellen.
 
-Naast dat de spelers het spel sneller oppakte lijken ze bij door o.a. de fysieke elementen wat ze geleerd hebben veel beter te onthouden. Bij de eerste testen hoorde je spelers meerdere keren met dezelfde vragen en dat was hier geen enkele keer het geval.
+Naast dat de spelers het spel sneller oppakten lijken ze bij door o.a. de fysieke elementen wat ze geleerd hebben veel beter te onthouden. Bij de eerste testen hoorde je spelers meerdere keren met dezelfde vragen en dat was hier geen enkele keer het geval.
 
 Natuurlijk zijn er ook elementen waar het spel stropiger verloopt. De spelers zijn erg tevreden over hoe de verschillende onderdelen gefaseerd op tafel komen. Het was duidelijk dat als de nieuwe regels in kleine stappen zijn verdeeld ze een goede indruk krijgen van de regels en snel verder kunnen met het spel. Helaas is het nog niet gelukt om deze fasering overal in door te voeren. Zo komt er op momenten nog erg veel tegelijk op tafel. Bijvoorbeeld alle opties in combat en de verschillende _'stats'_. Ook zijn sommige teksten, gekopieerd uit de starters set, nog erg lang terwijl ze bondiger en visueler verteld kunnen worden.
 
 Dit brengt me gelijk bij het volgende punt:
-Ondanks dat het enkel aan de gebruikerstest is toegevoegd om het alles voor mij behapbaar te maken gaven de testpersonen aan het erg fijn om met hetzelfde karakter te spelen. Op deze manier kunnen ze van elkaar leren en is het mogelijk om samen het spel uit te vinden. Ook al geven ze aan dat ze het leuk zouden vinden dat er meer verschillen zit in de karakters liever zij vinden het fijn als dit pas bij een later hoofdstuk wordt geintroduceerd. Dit is na afloop dus gelijk als inherent onderdeel aan het Proof of Concept toegevoegd.
+Ondanks dat het enkel aan de gebruikerstest is toegevoegd om het alles voor mij behapbaar te maken gaven de testpersonen aan het erg fijn te vinden om met hetzelfde karakter te spelen. Op deze manier kunnen ze van elkaar leren en is het mogelijk om samen het spel uit te vinden. Ook al geven ze aan dat ze het leuk zouden vinden dat er meer verschillen zit in de karakters, zouden zij het fijn vinden als dit pas bij een later hoofdstuk wordt geintroduceerd. Dit is na afloop dus gelijk als inherent onderdeel aan het Proof of Concept toegevoegd.
 
-Als laatste zijn er nog wel enkele dingen die heel duidelijk erg ontbreken. Gelukkig zijn dit nog veelal dingen die buiten de scope van mijn huidige ontwerpvraag vallen: Er is geen vaste structuur in het verhaal. Tijdens de gebruikerstest heb ik verhaal ter plekke geimproviseerd om op deze manier de verschillende elementen langs te laten komen. Dit zal de spelers helpen als in het vervolg ook aanwezig is, maar dit is helaas bijna een hele nieuwe ontwerpvraag op zichzelf.
+Als laatste zijn er nog wel enkele dingen die heel duidelijk erg ontbreken. Gelukkig zijn dit nog veelal dingen die buiten de scope van mijn huidige ontwerpvraag vallen: Er is geen vaste structuur in het verhaal. Tijdens de gebruikerstest heb ik het verhaal ter plekke geimproviseerd om op deze manier de verschillende elementen langs te laten komen. Dit zal de spelers helpen als dit in het vervolg ook aanwezig is, maar dit is helaas bijna een hele nieuwe ontwerpvraag op zichzelf.
 
 Op dezelfde manier is er voor de Dungeon Master nog weinig begeleiding bij het sturen van de spelers en het aanbieden van het verhaal, regels en spelwereld. Nu ligt alles nog los en heeft de Dungeon Master nog geen houvast of grip op wat er aan gaat komen. De enigste reden waarom dit voor mij behapbaar was is omdat ik dit product zelf heb ontworpen en de stappen enigzins van te voren heb kunnen labelen. 
 
-Ik heb bij de usertest een hands-off approach gekozen, maar ondanks dat de speler het begrijpen is het ook fijn om als DM meer houvast te hebben op het spel om jezelf en jouw spelers te helpen. Al is het door een aantal los geschreven scenes met introducte en klein leerdoel of een verhaal waar je de stappen aan op kunt hangen.
+Ik heb bij de usertest een hands-off approach gekozen, maar ondanks dat de spelers het begrijpen is het ook fijn om als DM meer houvast te hebben op het spel om jezelf en jouw spelers te helpen. Al is het door een aantal los geschreven scenes met introductie en klein leerdoel of een verhaal waar je de stappen aan op kunt hangen.
 
 ### Interface
 
 Naast het concept heb ik ook nog verschillende user interface elementen onderzocht. Een aantal van deze heb ik bij de usertest kunnen testen en bij bijna alles wat de spelers op het bord is gekomen meerdere variaties uitgeprobeerd. 
 
-Over het algemeen zijn de verschillende interface elementen goed bevallen. Men vindt het fijn dat je tactiele elementen hebt om vast te houden en het helpt dingen te onthouden en te begrijpen. De fysieke constrains zorgen er voor dat er nergens twijfel bestaat over waar je elementen kunt plaatsen. De layout  komt goed over en vinden de spelers het erg fijn als je _"even bij elkaar kunt spieken"_.
+Over het algemeen zijn de verschillende interface elementen goed bevallen. Men vindt het fijn dat je tactiele elementen hebt om vast te houden en het helpt dingen te onthouden en te begrijpen. De fysieke constraints zorgen er voor dat er nergens twijfel bestaat over waar je elementen kunt plaatsen. De layout  komt goed over en de spelers vinden het erg fijn als je _"even bij elkaar kunt spieken"_.
 
 #### Boekje
-De spelers vonden het erg fijn om onderdelen aan het boekje toe te voegen. De functie was duidelijk en ze ervaarde echt of ze als karakter en spelers beetje bij beetje beter werden. De art op de voorkant gaf de spelers duidelijk inspiratie, zie bijv. Karen, en maakte de achtergrond van het karakter duidelijk. Ondanks dat deze nog verbeterd kan worden, het is een grote toevoeging op het originele spel en zou hier nog meer van toe willen voegen.
+De spelers vonden het erg fijn om onderdelen aan het boekje toe te voegen. De functie was duidelijk en ze ervaarden echt of ze als karakter en spelers beetje bij beetje beter werden. De art op de voorkant gaf de spelers duidelijk inspiratie, zie bijv. Karen, en maakte de achtergrond van het karakter duidelijk. Ondanks dat deze nog verbeterd kan worden, het is een grote toevoeging op het originele spel en ik zou hier nog meer van toe willen voegen.
 
 #### HP tracker
 Bij deze usertest heb ik drie verschillende user interfaces getest. Twee er van bestaan uit een aantal wieltjes met _Hitpoints_ er op. Deze werkte erg goed bij de gebruikte testpersonen, maar ze gaven achteraf wel aan dat dit makkelijk verschoof. Hiernaast bij het uitwisselen van de elementen na de usertest kon Ruben ze met grote handen bijna niet bedienen. De interface die hij gebruikte met wieltjes die je uit het hout tilt en streepjes die de huidige _Hitpoints_ aangeven is hierbij de duidelijke winnaar.
 
 #### Spleet:
-De functie hiervan was niet erg zichtbaar. Uiteindelijk wel gebruikt voor kleine dingen, maar werd vooral achteraf erg handig bevonden. Dit moet in een volgende versie makkelijk met een nieuwe illustratie of icoontje zijn op te lossen. 
+De functie hiervan was niet erg zichtbaar. Uiteindelijk werd het wel gebruikt voor kleine dingen, maar werd vooral achteraf erg handig bevonden. Dit moet in een volgende versie makkelijk met een nieuwe illustratie of icoontje zijn op te lossen. 
 
 #### Stats bar
 Hiervan heb ik twee varianten getest. Een met details van de _stats_ en eentje zonder. Alle spelers gaven aan dat de variant zonder veel rustiger en niet met informatie kwam die ook ergens anders was te vinden.
@@ -60,7 +60,7 @@ Hiervan heb ik twee varianten getest. Een met details van de _stats_ en eentje z
 ####Inventory
 De inventory in het boekje werkte erg goed. Waar speler bij de officiele interface geen idee hebben wat ze bijhebbben is dit bij deze variant goed opgelost en heeft iedereen hier gelijk inzicht in. Als een verbeterpunt is de stevigheid van de pagina's in het boekje. De manier hoe deze nu vastgelijmd zitten is nog niet duurzaam genoeg. 
 
-Ook staan nu op de achterkant van de inventory items gedetaileerdere informatie, maar dit alleen verwarrend. Deze zal ik bij een volgende versie op eenzijdig ghouden. Als ze niet duidelijk zijn kan er naar het player handbook verwezen worden.
+Ook staan nu op de achterkant van de inventory items gedetaileerdere informatie, maar dit werkte alleen verwarrend. Deze zal ik bij een volgende versie op eenzijdig ghouden. Als ze niet duidelijk zijn kan er naar het player handbook verwezen worden.
 
 Ook was er nog een variant van de two-handed axe als klein papiertje, dit zorgde bij de usertest voor verwarring doordat deze als single-handed werd aangezien. De brede variant met de natuurlijke constrainst is ook hier een duidelijke winnaar. 
 
@@ -68,7 +68,7 @@ Ook was er nog een variant van de two-handed axe als klein papiertje, dit zorgde
 De spelers vinden het erg fijn om een fysieke inspiration token te ontvangen en voelt voor hen als een echte belonging. Wel vraagt deze token nog iets meer om een eigen uitleg. Wat de functie was van deze token was voor hen nog niet erg duidelijk.
 
 ### Abilities
-Van de abilities heb ik twee opties getest: Een papiervariant om te draaien na gebruiken en een houten i.c.m. een token. De papieren ervaarde de spelers niet als empowering en was hiernaast ook minder duidelijk. De houten variant heb ik hierbij dus gekozen als definitieve variant. Met als kanttekening dat de token nog wel makkelijk er in en uit te halen moet zijn.
+Van de abilities heb ik twee opties getest: Een papiervariant om te draaien na gebruik en een houten i.c.m. een token. De papieren ervaarde de spelers niet als empowering en was hiernaast ook minder duidelijk. De houten variant heb ik hierbij dus gekozen als definitieve variant. Met als kanttekening dat de token nog wel makkelijk er in en uit te halen moet zijn.
 
 ### XP tracker
-Hier is niet veel over te vertellen behalve dat deze voor iedereen heel duidelijk was en ze erg over te spreken waren.
+Hier is niet veel over te vertellen behalve dat deze voor iedereen heel duidelijk was en ze er erg over te spreken waren.
