Add extra link.

--- a/_posts/2019-07-29-UserTest4.md
+++ b/_posts/2019-07-29-UserTest4.md
@@ -7,8 +7,8 @@ tags: summary
 category: research
 ---
 
-<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLo_ke79yXggRU_eEQ9Gzjr39CAxhOM0Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-Playlist with two videos. Second video in the playlist contains user feedback.
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLo_ke79yXggRU_eEQ9Gzjr39CAxhOM0Bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Playlist with two videos. Second video in the playlist contains user feedback. In the case the above embedded playlist doesn't work you can find it here: [link](https://www.youtube.com/playlist?list=PLo_ke79yXggRU_eEQ9Gzjr39CAxhOM0Bw)
 
 Na afloop van de laatste gebruikerstest, en na enige bezinking van de resultaten, ben ik blij om te merken dat bij de test van mijn _Proof of Concept_ iedereen snel aan de slag kon met deze editie van _Dungeons & Dragons_. Er waren nog steeds enkele twijfels en momenten waarbij het spel wat trager verliep, maar in tegenstelling tot bij de eerste gebruikerstest gingen deze twijfels voornamelijk over wat ze *wilden* doen in plaats van wat ze *konden* doen. 
 
